--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.7.2",
     "formik": "2.4.5",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
